Update URLs for GitHub Pages hosting

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta name="revisit-after" content="7 days">
   <meta name="rating" content="General">
   <meta name="distribution" content="Global">
-  <link rel="alternate" hreflang="en" href="https://yourusername.github.io/recipe-finder">
+  <link rel="alternate" hreflang="en" href="https://Noohkh.github.io/mykitchen-recipes">
   
   <!-- Enhanced Open Graph Meta Tags -->
   <meta property="og:title" content="MyKitchen - Recipe Finder App | Discover Delicious Recipes">
   <meta property="og:description" content="Discover thousands of delicious recipes from around the world. Search Indian, Italian, Mexican, Chinese cuisines and more. Free recipe app with step-by-step cooking instructions.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yourusername.github.io/recipe-finder">
-  <meta property="og:image" content="https://yourusername.github.io/recipe-finder/recipe-app-preview.jpg">
+  <meta property="og:url" content="https://Noohkh.github.io/mykitchen-recipes">
+  <meta property="og:image" content="https://Noohkh.github.io/mykitchen-recipes/recipe-app-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="MyKitchen Recipe Finder - Discover thousands of delicious recipes">
@@ -37,7 +37,7 @@
   <meta name="twitter:creator" content="@MyKitchenApp">
   <meta name="twitter:title" content="MyKitchen - Recipe Finder App | Discover Delicious Recipes">
   <meta name="twitter:description" content="Discover thousands of delicious recipes from around the world. Search Indian, Italian, Mexican, Chinese cuisines and more.">
-  <meta name="twitter:image" content="https://yourusername.github.io/recipe-finder/recipe-app-preview.jpg">
+  <meta name="twitter:image" content="https://Noohkh.github.io/mykitchen-recipes/recipe-app-preview.jpg">
   <meta name="twitter:image:alt" content="MyKitchen Recipe Finder - Discover thousands of delicious recipes">
   
   <!-- Mobile App Meta Tags -->
@@ -64,7 +64,7 @@
   <link rel="prefetch" href="https://www.themealdb.com/api/json/v1/1/categories.php">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://yourusername.github.io/recipe-finder">
+  <link rel="canonical" href="https://Noohkh.github.io/mykitchen-recipes">
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -77,7 +77,7 @@
     "@type": "WebApplication",
     "name": "MyKitchen Recipe Finder",
     "description": "Discover thousands of delicious recipes from around the world with step-by-step cooking instructions",
-    "url": "https://yourusername.github.io/recipe-finder",
+    "url": "https://Noohkh.github.io/mykitchen-recipes",
     "applicationCategory": "LifestyleApplication",
     "operatingSystem": "All",
     "browserRequirements": "Requires HTML5 support",
@@ -91,7 +91,7 @@
     "author": {
       "@type": "Organization",
       "name": "MyKitchen Team",
-      "url": "https://yourusername.github.io/recipe-finder"
+      "url": "https://Noohkh.github.io/mykitchen-recipes"
     },
     "aggregateRating": {
       "@type": "AggregateRating",
@@ -109,7 +109,7 @@
       "Recipe categories",
       "Mobile-friendly interface"
     ],
-    "screenshot": "https://yourusername.github.io/recipe-finder/recipe-app-screenshot.jpg"
+    "screenshot": "https://Noohkh.github.io/mykitchen-recipes/recipe-app-screenshot.jpg"
   }
   </script>
   
@@ -119,8 +119,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "MyKitchen Recipe Finder",
-    "url": "https://yourusername.github.io/recipe-finder",
-    "logo": "https://yourusername.github.io/recipe-finder/logo.png",
+    "url": "https://Noohkh.github.io/mykitchen-recipes",
+    "logo": "https://Noohkh.github.io/mykitchen-recipes/logo.png",
     "description": "Your ultimate destination for discovering delicious recipes from around the world",
     "sameAs": [
       "https://facebook.com/mykitchen",
@@ -141,13 +141,13 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "MyKitchen Recipe Finder",
-    "url": "https://yourusername.github.io/recipe-finder",
+    "url": "https://Noohkh.github.io/mykitchen-recipes",
     "description": "Discover thousands of delicious recipes from around the world",
     "potentialAction": {
       "@type": "SearchAction",
       "target": {
         "@type": "EntryPoint",
-        "urlTemplate": "https://yourusername.github.io/recipe-finder/?search={search_term_string}"
+        "urlTemplate": "https://Noohkh.github.io/mykitchen-recipes/?search={search_term_string}"
       },
       "query-input": "required name=search_term_string"
     },
